blog: underline links in markdown content; date: make date rendering resilient to invalid formats

--- a/styles/global.css
+++ b/styles/global.css
@@ -36,6 +36,15 @@ img {
   display: block;
 }
 
+/* Underline links inside rendered markdown content */
+.markdown a {
+  text-decoration: underline;
+}
+.markdown a:hover {
+  text-decoration-thickness: from-font;
+  text-underline-offset: 2px;
+}
+
 /* Prevent long strings from causing horizontal scroll */
 a, p, li, code {
   overflow-wrap: anywhere;
