--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -12,4 +12,9 @@
 
 .backToHome {
   margin: 3rem 0 0;
+  display: flex;
+  gap: 0.75rem;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
 }
